--- a/stop_play_youtube/popup.html
+++ b/stop_play_youtube/popup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./popup.css" />
   </head>
   <body>
@@ -16,12 +17,11 @@
       </li>
     </template>
 
-    <h1>Video list</h1>
-    <ol id="lista_video_attivi"></ol>
+    <ul id="lista_video_attivi"></ul>
     
    
    
-    <ul></ul>
+    
 
     <script src="./popup.js" type="module"></script> 
   </body>
